# rpi-lcd-menu

./: .gitignore  pyproject.toml
examples/: example3.py
rpilcdmenu/: base_menu.py  rpi_lcd_hwd.py  rpi_lcd_menu.py  rpi_lcd_submenu.py
rpilcdmenu/items/: function_item.py  menu_item.py  message_item.py  submenu_item.py
rpilcdmenu/views/: message_view.py
