[tool.poetry]
name = "rpi-lcd-menu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
asyncpio = {git = "https://github.com/noddy99/asyncpio.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
